[gd_scene load_steps=2 format=3 uid="uid://blq3j2tvi0nt"]

[ext_resource type="Script" path="res://card.gd" id="1_86mfu"]

[node name="card" type="Node2D"]
top_level = true
z_index = 2
script = ExtResource("1_86mfu")
card_location = Vector2(200, 200)
card_color = Color(0.0117647, 0.854902, 0, 1)
card_size = Vector2(60, 120)

[node name="Card_Color" type="ColorRect" parent="."]
offset_right = 40.0
offset_bottom = 60.0
color = Color(0.215686, 0.568627, 0.211765, 1)
metadata/_edit_use_anchors_ = true

[node name="Card_Button" type="Button" parent="."]
offset_right = 40.0
offset_bottom = 60.0
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="Card_Button" to="." method="_on_card_button_button_down"]
[connection signal="button_up" from="Card_Button" to="." method="_on_card_button_button_up"]
